chore: fixed update tenant application
